--- a/index.html
+++ b/index.html
@@ -21,8 +21,18 @@
 
   <!--  #MAIN   -->
 
-  <main>
-    <!--    #SIDEBAR    -->
+  <main class="">
+      <!-- Texto   -->
+          <div class="focus2">
+            <span>C</span>
+            <span>O</span>
+            <span class="space"></span>
+            <span>2</span>
+            <span>0</span>
+            <span>2</span>
+            <span>4</span>
+          </div>
+      </main>
 
     
 
