--- a/index.html
+++ b/index.html
@@ -22,29 +22,28 @@
   <!--  #MAIN   -->
 
   <main class="">
-      <!-- Texto   -->
-          <div class="focus2">
-            <span>C</span>
-            <span>O</span>
-            <span class="space"></span>
-            <span>2</span>
-            <span>0</span>
-            <span>2</span>
-            <span>4</span>
-          </div>
-      </main>
+    <!-- Contenedor de Lottie con botón -->
+  <div id="lottie-container">
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
+    <dotlottie-player src="https://lottie.host/4894049a-6a43-4ca6-92e9-bf6a057cf28f/hWCxwpBWwZ.json" background="transparent" speed="1" loop autoplay></dotlottie-player>
+
+
+    <button id="load-btn">
+     Ver más
+    </button>
     
+  </div>
+
+  <!-- Contenido principal de la página -->
+  <div id="content">
+    <h2 class="h2">Bienvenido a mi Portafolio</h2>
+    <h3 class="h3">Sitio en Contrucción 🧡01</h3>
+  </div>
 
   </main>
-  <!--
-    - custom js link
-  -->
-  
-
-  <!--
-    - ionicon link
-  -->
+  <!-- Custom js link  -->
+  <script src="assets/js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
