Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Contenido principal de la página -->
   <div id="content">
     <h2 class="h2">Bienvenido a mi Portafolio</h2>
-    <h3 class="h3">Sitio en Contrucción 🧡01</h3>
+    <h3 class="h3">Sitio en Contrucción</h3>
   </div>
 
   </main>
