--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CO 2024</title>
-
-  
   <!--CSS-->
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/lottie.css">
@@ -17,32 +14,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <div id="lottie-container">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <dotlottie-player src="https://lottie.host/4894049a-6a43-4ca6-92e9-bf6a057cf28f/hWCxwpBWwZ.json" background="transparent" speed="1" loop autoplay></dotlottie-player>
     <button id="load-btn">Ver más</button>
   </div>
-<<<<<<< Updated upstream
-
-  <!-- Contenido principal de la página -->
-  <div id="content">
-    <h2 class="h2">Bienvenido a mi Portafolio</h2>
-    <h3 class="h3">Sitio en Contrucción</h3>
-  </div>
-
-=======
->>>>>>> Stashed changes
   </main>
   <!-- Custom js link  -->
   <script src="assets/js/lottie.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
-
 </html>
-
-
-
