--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name=”theme-color” content=”#7a6aff />
   <title>CO 2024</title>
+
+  <!--
+    - favicon
+  -->
+  <link rel="shortcut icon" href="/assets/images/ico.png" type="image/x-icon" />
+
   <!--CSS-->
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/lottie.css">
