--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -48,7 +48,7 @@
       
         <button class="info_more-btn" data-sidebar-btn>
           <span>Mostrar más información</span>
-          <ion-icon name="chevron-down"></ion-icon>
+          <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24"><path fill="currentColor" d="M5 6.25a.75.75 0 0 0-.488 1.32l7 6c.28.24.695.24.976 0l7-6A.75.75 0 0 0 19 6.25z" opacity="0.5"/><path fill="currentColor" fill-rule="evenodd" d="M4.43 10.512a.75.75 0 0 1 1.058-.081L12 16.012l6.512-5.581a.75.75 0 1 1 .976 1.139l-7 6a.75.75 0 0 1-.976 0l-7-6a.75.75 0 0 1-.081-1.058" clip-rule="evenodd"/></svg>
         </button>
       </div>
       
