--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="/assets/images/ico.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="./assets/images/ico.png" type="image/x-icon" />
 
   <!--CSS-->
   <link rel="stylesheet" href="./assets/css/style.css">
