--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <dotlottie-player src="https://lottie.host/4894049a-6a43-4ca6-92e9-bf6a057cf28f/hWCxwpBWwZ.json" background="transparent" speed="1" loop autoplay></dotlottie-player>
     <button id="load-btn">Ver más</button>
   </div>
+  <div id="lottie-container-mobil">
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+    <dotlottie-player src="https://lottie.host/c5d57a01-4e0a-4d70-99a6-2b6762717616/CmtAUeXwfh.json" background="transparent" speed="1" loop autoplay></dotlottie-player>
+    <button id="load-btn">Ver más</button>
+  </div>
+
+  
   </main>
   <!-- Custom js link  -->
   <script src="assets/js/lottie.js"></script>
