--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -517,6 +517,22 @@
 
           </a>
         </li>
+
+        <li class="project-item active" data-filter-item data-category="contenido para redes" data-date="Junio, 2024"
+              data-description="Publicaciones para redes sociales en formato historia y post sobre taller de música"
+            data-icon='<svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 256 250"><rect width="256" height="249.6" fill="#300" rx="42.5"/><path fill="#ff9a00" d="M124.054 149.79h-39.67l-8.072 25.073a2.02 2.02 0 0 1-2.061 1.546H54.158q-1.718 0-1.202-1.89l34.347-98.918q.515-1.545 1.03-3.52c.45-2.292.68-4.62.687-6.955a1.063 1.063 0 0 1 1.202-1.203h27.306q1.2 0 1.374.86l38.983 109.908q.515 1.72-1.03 1.718h-22.326a1.59 1.59 0 0 1-1.717-1.202zm-33.488-21.638H117.7l-.387-1.277l-.621-2.022l-.443-1.42l-.707-2.236l-1.503-4.707l-1.322-4.173l-3.433-10.87a334 334 0 0 1-2.46-8.138l-.628-2.21l-.734-2.613l-1.12-4.05l-.21-.763h-.171a139 139 0 0 1-3.136 12.23l-2.548 8.196l-1.402 4.528l-1.415 4.584q-.383 1.242-.765 2.456l-.76 2.398l-.756 2.342l-.752 2.284l-.748 2.227q-.372 1.1-.743 2.17zm90.501-46.025a12.46 12.46 0 0 1-9.445-3.778a13.6 13.6 0 0 1-3.607-9.789a12.6 12.6 0 0 1 3.864-9.53a13.27 13.27 0 0 1 9.165-3.697l.366.004q6.183 0 9.704 3.692a13.26 13.26 0 0 1 3.52 9.531a13.4 13.4 0 0 1-3.692 9.79a13.18 13.18 0 0 1-9.508 3.79zm-11.85 92.564V92.603q-.001-1.546 1.374-1.546h21.124q1.373 0 1.374 1.546v82.088q0 1.72-1.374 1.718h-20.952q-1.464 0-1.541-1.542z"/></svg>'>
+            <a href="#">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <img src="../assets/images/view-web.svg" alt="Vista">
+                </div>
+
+                <img src="../assets/images/publicacion-04.png" alt="Posts para redes sociales sobre taller de música" loading="lazy">
+              </figure>
+              <h3 class="project-title">Taller de música</h3>
+              <p class="project-category">Contenido para redes</p>
+            </a>
+          </li>
           </ul>
 
           <!-- Portfolio Modal -->
@@ -524,7 +540,7 @@
             <div class="overlay" data-overlay-portfolio></div>
             <section class="portfolio-modal">
               <button class="modal-close-btn" data-modal-close-btn-portfolio>
-                <ion-icon name="close-outline"></ion-icon>
+                <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24"><mask id="lineMdWatchOffTwotoneLoop0"><g fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"><circle cx="12" cy="12" r="0" fill="#fff" stroke="none"><animate attributeName="r" dur="4.5s" keyTimes="0;0.03;0.97;1" repeatCount="indefinite" values="0;3;3;0"/></circle><path fill="#fff" fill-opacity="0" d="M4 12c1.38 -0.77 4.42 -1.3 8 -1.3c3.58 0 6.62 0.53 8 1.3c-1.38 0.77 -4.42 1.3 -8 1.3c-3.58 0 -6.62 -0.53 -8 -1.3Z"><animate attributeName="d" dur="4.5s" keyTimes="0;0.03;0.97;1" repeatCount="indefinite" values="M4 12c1.38 -0.77 4.42 -1.3 8 -1.3c3.58 0 6.62 0.53 8 1.3c-1.38 0.77 -4.42 1.3 -8 1.3c-3.58 0 -6.62 -0.53 -8 -1.3Z;M2 12c1.72 -3.83 5.53 -6.5 10 -6.5c4.47 0 8.28 2.67 10 6.5c-1.72 3.83 -5.53 6.5 -10 6.5c-4.47 0 -8.28 -2.67 -10 -6.5Z;M2 12c1.72 -3.83 5.53 -6.5 10 -6.5c4.47 0 8.28 2.67 10 6.5c-1.72 3.83 -5.53 6.5 -10 6.5c-4.47 0 -8.28 -2.67 -10 -6.5Z;M4 12c1.38 -0.77 4.42 -1.3 8 -1.3c3.58 0 6.62 0.53 8 1.3c-1.38 0.77 -4.42 1.3 -8 1.3c-3.58 0 -6.62 -0.53 -8 -1.3Z"/><animate fill="freeze" attributeName="fill-opacity" begin="0.375s" dur="0.112s" values="0;0.3"/></path><path stroke="#000" stroke-dasharray="28" stroke-dashoffset="28" d="M0 11h24" transform="rotate(45 12 12)"><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.488s" dur="0.3s" values="28;0"/></path><path stroke-dasharray="28" stroke-dashoffset="28" d="M-1 13h24" transform="rotate(45 12 12)"><animate attributeName="d" dur="4.5s" repeatCount="indefinite" values="M-1 13h24;M1 13h24;M-1 13h24"/><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.488s" dur="0.3s" values="28;0"/></path></g></mask><rect width="24" height="24" fill="currentColor" mask="url(#lineMdWatchOffTwotoneLoop0)"/></svg>
               </button>
 
               <div class="modal-img-wrapper">
