--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#554dde" />
+  <meta name="theme-color" content="#170735" />
   <title>Portfolio</title>
 
   <!--
@@ -144,7 +144,7 @@
 
         <ul class="social-list">
           <li class="social-item">
-            <a target="_blank" href="https://www.instagram.com/dgco23/?utm_source=ig_web_button_share_sheet"
+            <a target="_blank" href="https://www.instagram.com/dgco23/?utm_source=ig_web_button_share_sheet" aria-label="Sígueme en Instagram"
               class="social-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24">
                 <circle cx="17" cy="7" r="1.5" fill="currentColor" fill-opacity="0">
