--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -320,7 +320,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn aria-label="Logos">Logos</button>
+              <button data-filter-btn aria-label="Logotipos">Logotipos</button>
             </li>
 
             <li class="filter-item">
@@ -349,7 +349,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item aria-label="Logos">Logos</button>
+                <button data-select-item aria-label="Logotipos">Logotipos</button>
               </li>
 
               <li class="select-item">
@@ -365,7 +365,7 @@
           <ul class="project-list">
 
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Abril, 2022"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Abril, 2022"
               data-description="The Roots es el nombre de un restaurante, representa la unión de diferentes culturas que se unen en un mismo lugar en el que pueden socializar mientras disfrutan de una comida en vivo."
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -378,11 +378,11 @@
                 </figure>
 
                 <h3 class="project-title">The Roots</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Marzo, 2023"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Marzo, 2023"
               data-description="Games Day es un evento anual de la universidad UFG para los estudiantes amantes de los videojuegos y la cultura gamer."
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -394,11 +394,11 @@
                   <img src="../assets/images/logo-02.png" alt="Games Day" loading="lazy">
                 </figure>
                 <h3 class="project-title">Games Day</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Mayo, 2022"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Mayo, 2022"
             data-description="El logo es mi imagotipo personal, que está conformada por las iniciales D y G por mi nombre Diego Guzmán y mi carrera en ingles Graphic Designer"
             data-svg-id='AdobeAI'>
             <a href="#">
@@ -411,7 +411,7 @@
                   loading="lazy">
               </figure>
               <h3 class="project-title"><strong>Diego Guzmán Graphic Designer</strong></h3>
-              <p class="project-category">Logos</p>
+              <p class="project-category">Logotipos</p>
 
             </a>
           </li>
@@ -470,7 +470,7 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Abril, 2022"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Abril, 2022"
               data-description="Festival del café es un logo  para un evento organizado por el Instituto Salvadoreño de Turismo (ISTU) en el Parque Natural Cerro Verde"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -482,14 +482,14 @@
                   <img src="../assets/images/logo-04.png" alt="Renovación de logo para Pizza Nova" loading="lazy">
                 </figure>
                 <h3 class="project-title">Festival del café</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
 
             
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Junio, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Junio, 2024"
             data-description="Tropical Sunset es un logo para un evento que se realiza en Sunset Park La Libertad"
             data-svg-id='AdobeAI'>
             <a href="#">
@@ -501,12 +501,12 @@
                 <img src="../assets/images/logo-03.png" alt="Games Day" loading="lazy">
               </figure>
               <h3 class="project-title">Tropical Sunset</h3>
-              <p class="project-category">Logos</p>
+              <p class="project-category">Logotipos</p>
 
             </a>
           </li>
 
-          <li class="project-item active" data-filter-item data-category="logos" data-date="Mayo, 2022"
+          <li class="project-item active" data-filter-item data-category="logotipos" data-date="Mayo, 2022"
               data-description="Este fue un logo para utilizarlo en piezas publicitarias sobre el Festival del cangrejo en San Vicente"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -519,7 +519,7 @@
                 </figure>
 
                 <h3 class="project-title">Festival del cangrejo</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
               </a>
             </li>
 
@@ -575,7 +575,7 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Abril, 2022"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Abril, 2022"
               data-description="Renovación del logo para Pizza Nova con un estilo más moderno y fresco. Este nuevo diseño busca reflejar la evolución de la marca, manteniendo los colores icónicos que los clientes reconocen. Con líneas más limpias y una tipografía contemporánea."
               data-svg-id='AdobeAI'>              
               <a href="#">
@@ -587,12 +587,12 @@
                   <img src="../assets/images/logo-05.png" alt="Renovación del logo para Pizza Nova" loading="lazy">
                 </figure>
                 <h3 class="project-title">Pizza Nova</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Marzo, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Marzo, 2024"
               data-description="Un logo para Sunset Reggae, un evento para promocionar este espacio y disfrutar de música reggae en Sunset Park, La Libertad."
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -604,11 +604,11 @@
                   <img src="../assets/images/logo-08.png" alt="Sunset Reggae" loading="lazy">
                 </figure>
                 <h3 class="project-title">Sunset Reggae</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Junio, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Junio, 2024"
               data-description="Logo para la Orquesta San Esteban para promocionar su participación en los eventos en conjunto con el ISTU"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -620,7 +620,7 @@
                   <img src="../assets/images/logo-09.png" alt="Orquesta San Esteban" loading="lazy">
                 </figure>
                 <h3 class="project-title">Orquesta San Esteban</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
@@ -675,7 +675,7 @@
             </a>
           </li>
 
-          <li class="project-item active" data-filter-item data-category="logos" data-date="Abril, 2024"
+          <li class="project-item active" data-filter-item data-category="logotipos" data-date="Abril, 2024"
               data-description="Carnavalito Playero es un logo diseñado para un evento vibrante y lleno de energía, promete diversión y entretenimiento en un entorno espectacular junto al mar"
               data-svg-id='AdobeAI'>              
               <a href="#">
@@ -687,12 +687,12 @@
                   <img src="../assets/images/logo-11.png" alt="Logo Carnavalito Playero" loading="lazy">
                 </figure>
                 <h3 class="project-title">Carnavalito Playero</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Marzo, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Marzo, 2024"
               data-description="Logo para la Orquesta Los Corsarios para promocionar su participación en los eventos en conjunto con el ISTU"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -704,11 +704,11 @@
                   <img src="../assets/images/logo-12.png" alt="Logo para Orquesta Los Corsarios" loading="lazy">
                 </figure>
                 <h3 class="project-title">Orquesta Los Corsarios</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Junio, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Junio, 2024"
               data-description="Logo para Apertura Summer, un evento diseñado para inaugurar el verano en La Puerta del Diablo, en Los Planes de Renderos. Este lugar turístico se llenará de música, diversión y actividades para todas las edades, celebrando el inicio de la temporada vacaional"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -720,11 +720,11 @@
                   <img src="../assets/images/logo-13.png" alt="Logo para Apertura Summer" loading="lazy">
                 </figure>
                 <h3 class="project-title">Apertura Summer</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Junio, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Junio, 2024"
               data-description="Logo para el Festival del Marañón, un evento que se realiza en San Vicente, donde la gastronomía y la artesanía se combinan con espectáculos artísticos, la coronación de la Reina del Marañón, paseos en lancha y caminatas. La noche culmina con un gran baile, celebrando la riqueza cultural y las tradiciones del lugar"
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -736,11 +736,11 @@
                   <img src="../assets/images/logo-14.png" alt="Logo para Apertura Summer" loading="lazy">
                 </figure>
                 <h3 class="project-title">Apertura Summer</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
-            <li class="project-item active" data-filter-item data-category="logos" data-date="Marzo, 2024"
+            <li class="project-item active" data-filter-item data-category="logotipos" data-date="Marzo, 2024"
               data-description="Noche Tropipop es un logotipo diseñado para una fiesta vibrante que se lleva a cabo en La Puerta del Diablo. Este evento promete una noche llena de música tropical y pop, junto con muchas sorpresas para todos los salvadoreños."
               data-svg-id='AdobeAI'>
               <a href="#">
@@ -752,7 +752,7 @@
                   <img src="../assets/images/logo-16.png" alt="Logo para la Noche Tropipop" loading="lazy">
                 </figure>
                 <h3 class="project-title">Noche Tropipop</h3>
-                <p class="project-category">Logos</p>
+                <p class="project-category">Logotipos</p>
 
               </a>
             </li>
