--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -83,7 +83,7 @@
             <div class="contact-info">
               <p class="contact-title">Correo</p>
 
-              <a href="mailto:diegochristopher34@gmail.com" class="contact-link">diegochristopher34@gmail.com</a>
+              <a href="mailto:designer.dg23@gmail.com" class="contact-link">designer.dg23@gmail.com</a>
             </div>
           </li>
 
@@ -1106,9 +1106,6 @@
           <form action="#" class="form" data-form>
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Nombre Completo" required
-                data-form-input />
-
-              <input type="email" name="email" class="form-input" placeholder="Dirección de correo" required
                 data-form-input />
             </div>
 
