--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -328,7 +328,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn aria-label="Web Desing">Diseño Web</button>
+              <button data-filter-btn aria-label="Diseño Web">Diseño Web</button>
             </li>
           </ul>
 
@@ -357,7 +357,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item aria-label="Social Network">Diseño Web</button>
+                <button data-select-item aria-label="Diseño Web">Diseño Web</button>
               </li>
             </ul>
           </div>
@@ -791,8 +791,25 @@
             </a>
           </li>
 
-            
-          </ul>
+
+          <li class="project-item active" data-filter-item data-category="diseño web"
+    data-date="2022 - 2024"
+    data-description="Los últimos tres años han sido un viaje apasionante de descubrimiento y aprendizaje en el mundo del diseño web. Este video es una recopilación de los proyectos que más me enorgullecen, cada uno un hito en mi trayectoria como diseñador. Desde mis primeros intentos hasta mis creaciones más recientes, he evolucionado constantemente, perfeccionando mis habilidades y explorando nuevas tecnologías."
+    data-svg-id='AdobeAI, AdobePS, Affter, Premiere'  data-video="true">
+    <a href="#">
+      <figure class="project-img">
+        <div class="project-item-icon-box">
+            <img src="../assets/images/view-web.svg" alt="Vista">
+        </div>
+        <img src="../assets/video/miniatura.png" alt="Video Recopilatorio"
+             loading="lazy">
+    </figure>
+        <h3 class="project-title">Video Recopilatorio</h3>
+        <p class="project-category">Diseño Web</p>
+    </a>
+</li>
+
+</ul>
 
           <!-- Portfolio Modal -->
           <div class="modal-container" data-modal-container-portfolio>
@@ -831,7 +848,7 @@
               </button>
 
               <div class="modal-img-wrapper">
-                <figure class="modal-avatar-box">
+                <figure class="modal-avatar-box" data-modal-img-wrapper>
                   <img src="../assets/images/logo-1.png" alt="Portfolio Item" width="360" data-modal-img-portfolio>
                 </figure>
               </div>
