--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -794,7 +794,7 @@
 
           <li class="project-item active" data-filter-item data-category="diseño web"
     data-date="2022 - 2024"
-    data-description="La pasión por el diseño web me impulsa a crear experiencias digitales únicas. En este video, quiero compartir contigo algunos de mis proyectos más destacados, desarrollados a lo largo de mi carrera. Cada línea de código, cada elemento visual, es el resultado de horas de dedicación y un amor genuino por mi profesión."
+    data-description="La pasión por el diseño web me impulsa a crear experiencias digitales únicas. En este video, quiero compartir algunos de mis proyectos más destacados, desarrollados a lo largo de mi carrera. Cada línea de código, cada elemento visual, es el resultado de horas de dedicación y un amor genuino por mi profesión."
     data-svg-id='AdobeAI, AdobePS, Affter, Premiere'  data-video="true">
     <a href="#">
       <figure class="project-img">
