--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -1093,7 +1093,7 @@
               </div>
 
               <h3 class="h3"><a target="_blank"
-                  href="https://onedrive.live.com/?authkey=%21AGwn1tw7siMbANk&id=1AE1520D5530DD58%2141687&cid=1AE1520D5530DD58&parId=root&parQt=sharedby&o=OneUp"
+                  href="https://ufgedu-my.sharepoint.com/:b:/g/personal/ad_guzman_ufg_edu_sv/EQZR-0bpzmlPgUl19KAfr3sBN5cp8aExZT3NQJVQstPV8g?e=l0EkZB"
                   download="CV-DiegoGuzmán">Descargar hoja de vida</a></h3>
             </div>
             </li>
