--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -141,7 +141,7 @@
         </ul>
 
         <div class="separator"></div>
-
+<!-- 
         <ul class="social-list">
           <li class="social-item">
             <a target="_blank" href="https://www.instagram.com/dgco23/?utm_source=ig_web_button_share_sheet" aria-label="Sígueme en Instagram"
@@ -164,7 +164,9 @@
             </a>
           </li>
         </ul>
+        -->
       </div>
+      
     </aside>
 
     <!--
@@ -205,8 +207,7 @@
 
         <section class="about-text">
           <p>
-            ¡Hola! Soy Diego Guzmán, actualmente tengo 25 años de edad, estoy
-            en mi quinto año de la carrera de Diseño Gráfico Web Multimedia.
+            ¡Hola! Soy Diego Guzmán, actualmente estoy próximo a egresar la carrera de Diseño Gráfico Web Multimedia. 
             Me considero una persona autodidacta y creativa. Desde el inicio
             de mi bachillerato tuve una breve introducción sobre el diseño UI
             y UX, siendo mi primer acercamiento e interés al área del diseño
@@ -1093,7 +1094,7 @@
               </div>
 
               <h3 class="h3"><a target="_blank"
-                  href="https://ufgedu-my.sharepoint.com/:b:/g/personal/ad_guzman_ufg_edu_sv/EQZR-0bpzmlPgUl19KAfr3sBN5cp8aExZT3NQJVQstPV8g?e=l0EkZB"
+                  href="https://ufgedu-my.sharepoint.com/:b:/g/personal/ad_guzman_ufg_edu_sv/EQNCt0Wa6DBHr_wDnRRx2ucBX88JY__xsb2WXSEm5WMfqw?e=1OIAv9"
                   download="CV-DiegoGuzmán">Descargar hoja de vida</a></h3>
             </div>
             </li>
