--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -308,9 +308,12 @@
             La Hierba de Corazón en los cómics de Marvel otorga habilidades mejoradas y permite al portador acceder a un
             plano trascendental conocido como el Plano Astral. De manera similar, <strong>CO</strong> sería ese acceso a
             ese plano para mostrar a las personas mis proyectos a lo largo de mi carrera.
-
           </p>
+          <p>Tuve la oportunidad de presentar este portafolio en un evento académico en mi universidad el 02 de diciembre del 2024, donde recibí un  <a target="_blank" href="../assets/images/diploma.jpg">reconocimiento especial.</a> Personalmente este logro representa una motivación para seguir perfeccionando mi trabajo y creciendo tanto profesional como académicamente.</p>
         </section>
+
+
+
         <!--
         - #PORTFOLIO
       -->
@@ -1120,7 +1123,6 @@
 
         <section class="contact-form">
           <h3 class="h3 form-title">Formulario de contacto</h3>
-
           <form action="#" class="form" data-form>
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Nombre Completo" required
