--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -490,6 +490,7 @@
 
               </a>
             </li>
+            
 
             
 
@@ -912,7 +913,7 @@
 
               <p class="timeline-text">
                 Agradecido con Dios por la oportunidad de obtener una beca y poder estudiar una carrera universitaria,
-                que me ha permitido avanzar en mi carrera profesional. Durante mi formación en la Lic. en Diseño Web
+                que me ha permitido avanzar en mi carrera profesional. Durante mi formación en la Licenciatura en Diseño Web
                 Gráfico Web Multimedia, he adquirido conocimientos en diversas áreas del diseño gráfico y desarrollo
                 digital.
               </p>
@@ -973,6 +974,17 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Trabajo Actual: <a target="_blank" href="https://multiplicayliberate.com/">MULTIPLICA & LIBERATE</a></h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                Actualmente creo contenido multimedia para redes sociales, mejorando la presencia en línea
+                de diferentes cuentas. Así como ilustraciones para diferentes fines.
+              </p>
+            </li>
+
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Pasantia: Instituto Salvadoreño de Turismo.</h4>
 
