--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -207,7 +207,7 @@
 
         <section class="about-text">
           <p>
-            ¡Hola! Soy Diego Guzmán, actualmente estoy próximo a egresar la carrera de Diseño Gráfico Web Multimedia. 
+            ¡Hola! Soy Diego Guzmán, licenciado de la carrera de Diseño Gráfico Web Multimedia de la <a target="_blank" href="https://www.ufg.edu.sv/">UFG</a>. 
             Me considero una persona autodidacta y creativa. Desde el inicio
             de mi bachillerato tuve una breve introducción sobre el diseño UI
             y UX, siendo mi primer acercamiento e interés al área del diseño
@@ -906,10 +906,10 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">
-                Universidad Francisco Gavidia
+                Licenciatura en Diseño Gráfico Web Multimedia
               </h4>
 
-              <span>2020 — Actualidad</span>
+              <span>2020 — 2025</span>
 
               <p class="timeline-text">
                 Agradecido con Dios por la oportunidad de obtener una beca y poder estudiar una carrera universitaria,
@@ -981,7 +981,7 @@
 
               <p class="timeline-text">
                 Actualmente creo contenido multimedia para redes sociales, mejorando la presencia en línea
-                de diferentes cuentas. Así como ilustraciones para diferentes fines.
+                de diferentes cuentas. Así como ilustraciones digitales para diferentes fines.
               </p>
             </li>
 
@@ -1109,7 +1109,7 @@
               </div>
 
               <h3 class="h3"><a target="_blank"
-                  href="https://ufgedu-my.sharepoint.com/:b:/g/personal/ad_guzman_ufg_edu_sv/EQNCt0Wa6DBHr_wDnRRx2ucBX88JY__xsb2WXSEm5WMfqw?e=1OIAv9"
+                  href="https://drive.google.com/file/d/1OV2dMfbC8LPJofVVptweJezJ9aqi2bQg/view?usp=sharing"
                   download="CV-DiegoGuzmán">Descargar hoja de vida</a></h3>
             </div>
             </li>
